apps/codeai/envTypes/test/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdo-dashboard
spec:
  template:
    spec:
      containers:
        - name: dashboard
          env:
            - name: RAILS_ENV
              value: test
            - name: RACK_ENV
              value: test
            - name: PERMIT_UNKNOWN_PROPERTIES_IN_CDO
              value: "1"
